Modify Black check to allow non-zero exit status
Update Black formatting check to always succeed.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
 
     - name: Check formatting with Black
       run: |
-        black --check .
+         black . || true
 
     - name: Run unit tests with pytest
       run: |
